1.2.1 (not yet released):
- Modify the Makefile so we can choose the directory to save sources when
creating RPMs.

1.2:
- Improve error handling.
- Improve the spec file.
- Improve the Makefile.

1.1:
- Add a spec file for the creation of a RPM for ORM (use "make rpm" to create
it).
- Add the missing top-level Makefile.
- Improve the man page for the ORM script.
- Add the automatic generation and installation of man pages for all ORM.
scripts.
- Add the capability of package install using the orm script (see the orm
manpage for more details).

1.0:
- Separate ORM from the rest of the OSCAR code.
