@@ -1,5 +1,7 @@
 DESTDIR=
+PKGDEST=
 SOURCEDIR=/usr/src/redhat/SOURCES
+PKG=orm
 
 include ./Config.mk
 
@@ -16,26 +18,38 @@ uninstall:
 
 clean:
 	@rm -f build-stamp configure-stamp
-	@rm -rf debian/orm debian/files
-	@rm -f orm.tar.gz
-	@rm -f orm.spec
+	@rm -rf debian/$(PKG) debian/files
+	@rm -f $(PKG).tar.gz
+	@rm -f $(PKG).spec
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} clean ) ; done
 
 dist: clean
-	@rm -rf /tmp/orm
-	@mkdir -p /tmp/orm
-	@cp -rf * /tmp/orm
-	@cd /tmp/orm; rm -rf `find . -name ".svn"`
-	@cd /tmp; tar czf orm.tar.gz orm
-	@cp -f /tmp/orm.tar.gz .
-	@rm -rf /tmp/orm/
-	@rm -f /tmp/orm.tar.gz
+	@rm -rf /tmp/$(PKG)
+	@mkdir -p /tmp/$(PKG)
+	@cp -rf * /tmp/$(PKG)
+	@cd /tmp/$(PKG); rm -rf `find . -name ".svn"`
+	@cd /tmp; tar czf $(PKG).tar.gz orm
+	@cp -f /tmp/$(PKG).tar.gz .
+	@rm -rf /tmp/$(PKG)/
+	@rm -f /tmp/$(PKG).tar.gz
 
 rpm: dist
-	sed -e "s/PERLLIBPATH/$(SEDLIBDIR)/" < orm.spec.in \
-        > orm.spec
-	cp orm.tar.gz $(SOURCEDIR)
-	rpmbuild -bb ./orm.spec
+	sed -e "s/PERLLIBPATH/$(SEDLIBDIR)/" < $(PKG).spec.in \
+        > $(PKG).spec
+	cp $(PKG).tar.gz $(SOURCEDIR)
+	rpmbuild -bb ./$(PKG).spec
+	@if [ -n "$(PKGDEST)" ]; then \
+        mv `rpm --eval '%{_topdir}'`/RPMS/noarch/$(PKG)-*.noarch.rpm $(PKGDEST); \
+    fi
 
 deb:
-	dpkg-buildpackage -rfakeroot
+	@if [ -n "$$UNSIGNED_OSCAR_PKG" ]; then \
+        echo "dpkg-buildpackage -rfakeroot -us -uc"; \
+        dpkg-buildpackage -rfakeroot -us -uc; \
+    else \
+        echo "dpkg-buildpackage -rfakeroot"; \
+        dpkg-buildpackage -rfakeroot; \
+    fi
+	@if [ -n "$(PKGDEST)" ]; then \
+        mv ../$(PKG)*.deb $(PKGDEST); \
+    fi
